[B] Fix missing margin in BackendProjectDetail form
[Fixes #369]

--- a/client/src/theme/Components/backend/project/_avatar-builder.scss
+++ b/client/src/theme/Components/backend/project/_avatar-builder.scss
@@ -43,7 +43,6 @@
 
   .grid {
     display: block;
-    padding: 20px 0;
     text-align: center;
 
     @include respond($break95) {
